--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">calculatorapp</string>
     <string name="enter_first_number">Enter first number</string>
     <string name="enter_second_number">Enter second number</string>
+    <string name="addition">+</string>
+    <string name="subtraction">-</string>
+    <string name="multiplication">X</string>
+    <string name="division">/</string>
 </resources>
